# mini_framework

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example/body/: main.py
example/body/tests/: test_main.py
example/cookies/: main.py
example/cookies/tests/: test_main.py
example/di/: main.py
example/di/tests/: test_main.py
example/error/: main.py
example/error/tests/: test_main.py
example/file/: main.py
example/file/tests/: test_main.py
example/form/: main.py
example/form/tests/: conftest.py  test_main.py
example/headers/: main.py
example/headers/tests/: test_main.py
example/index/: main.py  test_main.py
example/index/tests/: test_main.py
example/json/: main.py
example/json/tests/: test_main.py
example/middleware/: main.py
example/middleware/tests/: test_main.py
example/not_found/: main.py
example/not_found/tests/: test_main.py
example/path_params/: main.py
example/path_params/tests/: test_main.py
example/prefix/: home.py  main.py
example/prefix/tests/: test_home.py  test_main.py
example/query_params/: main.py
example/query_params/tests/: test_main.py
example/redirect/: main.py
example/redirect/tests/: test_main.py
example/response_class/: main.py
example/response_class/tests/: test_main.py
example/response_model/: main.py
example/response_model/tests/: test_main.py
example/router/: home.py  main.py
example/router/tests/: test_home.py
example/static/: main.py
example/static/templates/: index.html
example/static/tests/: test_main.py
example/stream/: main.py
example/stream/tests/: test_main.py
example/templating/: main.py
example/templating/tests/: test_main.py
example/validation/msgspec/: main.py
example/validation/msgspec/tests/: test_main.py
example/validation/pydantic/: main.py
example/validation/pydantic/tests/: test_main.py
src/mini_framework/: __init__.py  app.py  datastructures.py  exceptions.py  params.py  request.py  responses.py  route.py  router.py  staticfiles.py  templating.py  utils.py
src/mini_framework/errors/: error.py  handlers.py  manager.py
src/mini_framework/filters/: __init__.py  base.py  exception.py
src/mini_framework/managers/: routes.py
src/mini_framework/middlewares/: __init__.py  base.py  errors.py  manager.py
src/mini_framework/routes/: manager.py  params_resolvers.py  route.py
src/mini_framework/serialization_preparer/: base.py  pydantic.py
src/mini_framework/validators/: base.py  pydantic.py
tests/: conftest.py  test_app.py  test_create.py  test_di.py  test_error.py  test_errors.py  test_filter.py  test_filters.py  test_middleware.py  test_middlewares.py  test_register.py  test_request.py  test_response.py  test_router.py  test_routing.py  test_staticfiles.py  test_templating.py  test_utils.py  test_validator.py
