[tool.poetry]
name = "mini-framework"
version = "0.0.1"
description = "This is a mini framework. THIS ONLY FOR EDUCATIONAL PURPOSES."
authors = ["Vladyslav Timofeev <Timofeevvladyslav49@gmail.com>"]
readme = "README.md"
packages = [{include = "mini_framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = ">=23.12.1,<23.13.0"
flake8 = "^7.0.0"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-bugbear = "^24.1.16"
flake8-comprehensions = "^3.14.0"
flake8-print = "^5.0.0"
flake8-docstrings = "^1.7.0"
pyright = "^1.1.347"
pytest = "^7.4.4"
httpx = "^0.26.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
