[tool.poetry]
name = "mini-framework"
version = "0.0.1"
description = "This is a mini framework. THIS ONLY FOR EDUCATIONAL PURPOSES."
authors = ["Vladyslav Timofeev <Timofeevvladyslav49@gmail.com>"]
readme = "README.md"
packages = [{include = "mini_framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
multidict = "^6.0.5"

[tool.poetry.group.templates]
optional = true

[tool.poetry.group.templates.dependencies]
jinja2 = "^3.1.3"

[tool.poetry.group.multipart]
optional = true

[tool.poetry.group.multipart.dependencies]
python-multipart = "^0.0.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pyright = "^1.1.348"
pytest = "^7.4.4"
httpx = "^0.26.0"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.1.1"
pytest-repeat = "^0.9.3"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
reportMissingImports = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"